WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
312143
innerText: fix whitespace handling at inline-block boundaries
https://bugs.webkit.org/show_bug.cgi?id=312143
Summary
innerText: fix whitespace handling at inline-block boundaries
Chris Dumez
Reported
2026-04-13 04:09:13 PDT
innerText: fix whitespace handling at inline-block boundaries
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2026-04-13 04:13:24 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/62628
EWS
Comment 2
2026-04-13 21:35:34 PDT
Committed
311163@main
(0db1abc43254): <
https://commits.webkit.org/311163@main
> Reviewed commits have been landed. Closing PR #62628 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2026-04-13 21:36:14 PDT
<
rdar://problem/174713114
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug